@@ -1,3 +1,14 @@
+2017-08-09  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-752
+
+	* src/m_cloudbox.cc (ScatSpeciesScatAndMetaRead):
+
+	Don't silently ignore exceptions from xml_read_stream (e.g. about wrong
+	version of scattering meta data).
+
+	Don't exceed array boundaries if string splitting fails.
+
 2017-08-07  Manfred Brath  <manfred.brath@uni-hamburg.de>
 
 	* arts-2-3-751
